...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <outlet property="cellImage" destination="UHT-CC-7rY" id="m9i-Vu-M30"/>
                                            <outlet property="dateLabel" destination="zZ7-qv-kLf" id="v4s-uC-ojU"/>
                                            <outlet property="likeButton" destination="sdE-8c-JJO" id="qI9-Lz-Dgp"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="iLa-Sj-bRa"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="V8N-x6-rWW"/>
...
                            <constraint firstItem="7RM-LG-zu7" firstAttribute="trailing" secondItem="mC2-Di-bFm" secondAttribute="trailing" id="wVT-TV-mt1"/>
                            <constraint firstItem="Xaa-Zz-Lw0" firstAttribute="leading" secondItem="7RM-LG-zu7" secondAttribute="leading" constant="8" id="wid-6f-9vk"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Rop-UD-BDX"/>
                    <connections>
                        <outlet property="backButton" destination="Xaa-Zz-Lw0" id="vOE-Sf-P0v"/>
                        <outlet property="imageView" destination="ZBo-oy-VFV" id="h5k-md-ii4"/>
                        <outlet property="scrollView" destination="mC2-Di-bFm" id="0a6-qC-Yr1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Evd-6d-XyG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
