...
                   \.estimatedProgress,
                   options: [],
                   changeHandler: { [weak self] _, _ in
                       guard let self = self else { return }
                       presenter?.didUpdateProgressValue(webView.estimatedProgress)
                   })
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
    }

...
